--- a/favorites.html
+++ b/favorites.html
@@ -35,6 +35,11 @@
                 Some of my favorite foods to cook include penne alla vodka, fried rice, and curry. I cook them pretty often for my family and we tend to work together to make lunch and dinner. Some of my favorite foods<br>
                 to eat include chicken katsu, pad thai, and cheeseburgers. As for biking, I like doing it around fort greene park and on governors island.
             </p>
+            <audio controls>
+                <source src="rock.wav" type="audio/wav">
+                <source src="rock.ogg" type="audio/ogg">
+                Your browser does not support the audio element.
+            </audio>
         </section>
     </main>
     <footer>
