--- a/favorites.html
+++ b/favorites.html
@@ -36,7 +36,7 @@
                 to eat include chicken katsu, pad thai, and cheeseburgers. As for biking, I like doing it around fort greene park and on governors island.
             </p>
             <audio controls>
-                <source src="rock.wav" type="audio/wav">
+                <source src="rock.mp3" type="audio/mpeg">
                 <source src="rock.ogg" type="audio/ogg">
                 Your browser does not support the audio element.
             </audio>
